--- a/Bedhiya.html
+++ b/Bedhiya.html
@@ -120,7 +120,7 @@ li a:hover {
         <li>Duration :- 2h 36min</li>
     </ul>
     <div class="dawnload">
-    <button class="btn"><a class="buttons" href="https://drive.google.com/uc?id=1R_4Y6Wmwab3TWH3GN6ec4QgtJy_mfMzl" dawnload> Download Movie</a> </button>
+    <button class="btn"><a class="buttons" href="https://drive.google.com/uc?id=1XYNOaAnIWWZ_ahkpzxxGR_ygU1mcZfJE&amp;confirm=t&amp;uuid=0fd0c4bb-4e7a-47d5-b080-3661552f8ff4&amp;at=AKKF8vzkNcrtF5eVaz5aCdRBnrYM:1687453967714" dawnload> Download Movie</a> </button>
 </div>
   </body>
 </html>
