--- a/jogiresara.html
+++ b/jogiresara.html
@@ -120,7 +120,7 @@ li a:hover {
         <li>Duration :- 2h 1min</li>
     </ul>
     <div class="dawnload">
-    <button class="btn"><a class="buttons" href="https://drive.google.com/uc?id=1c0-E_CIBeKx-IgyMEnTbpXYiuyhkd0fO" dawnload> Download Movie</a> </button>
+    <button class="btn"><a class="buttons" href="https://drive.google.com/uc?id=1JdC7oOaAllqsm8FTv3mP-3QQJfuGvBdt&amp;confirm=t&amp;uuid=f700c827-1a50-4d14-9473-f11ceb7f572a&amp;at=AKKF8vxYXtUs61QPR9oDvjw_8H2g:1687533603629" dawnload> Download Movie</a> </button>
 </div>
   </body>
 </html>
