--- a/ZaraHatke.html
+++ b/ZaraHatke.html
@@ -121,7 +121,7 @@ li a:hover {
         <li>Duration :- 2h 20min</li>
     </ul>
     <div class="dawnload">
-    <button class="btn"><a class="buttons" href="https://drive.google.com/uc?id=1_0oGGGPdjo4UpAj3429GikxJCbAyjt3Z&amp;confirm=t&amp;uuid=fcbf6eb4-c357-4503-a58e-99cecf50e46e&amp;at=AKKF8vx-_c8A6nx_H9QF0MblH4N2:1687453138884" dawnload> Download Movie</a> </button>
+    <button class="btn"><a class="buttons" href="https://drive.google.com/uc?id=19FST0G5rwTCrbHR9seGtfUsdIPhwAuSm" dawnload> Download Movie</a> </button>
 </div>
   </body>
 </html>
