--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link 
-    rel="Shortcut Icon" type="image/png" img src="https://i.ibb.co/3c0Nt5L/android-chrome-512x512.png" >
+    <link rel="Shortcut Icon" type="image.png" img src="https://i.ibb.co/3c0Nt5L/android-chrome-512x512.png" >
 </head>
 <body>
     <style>
@@ -74,6 +73,18 @@ display: block;
         margin-left: auto;
         margin-right: auto;
 }
+.founderimg{
+  border-radius: 10%;
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+h5{
+  text-align: center;
+  font-size: 40px;
+}
 </style>
 <header>
     <h1>Filmy Fair</h1>
@@ -81,17 +92,14 @@ display: block;
 <div>
    <ul>
      <li><a href="index.html">Home</a></li>
-     <li><a href="contact.html
-       ">Contact</a></li>
+     <li><a href="contact.html">Contact</a></li>
      <li style="float:right"><a class="active" href="Aboutus.html">About</a></li>
    </ul>
-    <!-- Add icon library -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+   <h5>Founder</h5>
+   <img class="founderimg" src="https://i.ibb.co/nDZZQ5x/kartikimage.jpg" height="200px" width="200px" >
+   <h5>KARTIK SAHU</h5>
 <!-- Add font awesome icons -->
-<a href="https://www.snapchat.com/add/kartik_sahu1842?share_id=jpgJrWScY10&locale=en-IN" class="fa fa-snapchat-ghost"></a>
-<a href="https://instagram.com/kartiksahu896?igshid=MzNlNGNkZWQ4Mg==" class="fa fa-instagram"></a>
-<a class="watsapp" href="https://wa.me/qr/6PENRIMWKALQN1 "><img src="https://i.ibb.co/D4Fdvtr/watsapp-png.png" alt="watsapp-png" border="0" width="200px"></a>
+<a href="https://wa.me/qr/6PENRIMWKALQN1 "><img src="https://i.ibb.co/hyX60k8/watsapp-png.png" alt="watsapp" height="110px" width="110px"></a><a href="https://instagram.com/kartiksahu896?igshid=MzNlNGNkZWQ4Mg=="><img src="https://i.ibb.co/qkNRgkP/insta.jpg" alt="insta"  height="60px" width="60px" ></a>   <a href="https://www.snapchat.com/add/kartik_sahu1842?share_id=jpgJrWScY10&locale=en-IN"><img src="https://i.ibb.co/nLSNtGw/snap.png" alt="snap" height="70px" width="70px" ></a>  
 
 </body>
 </html>
