--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filmy Fair</title>
-<link
-rel="Shortcut Icon" type="image.png" img src="https://i.ibb.co/3c0Nt5L/android-chrome-512x512.png" >
-</link>
+    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/3c0Nt5L/android-chrome-512x512.png">
 </head>
 <body>
   
@@ -20,6 +18,7 @@ rel="Shortcut Icon" type="image.png" img src="https://i.ibb.co/3c0Nt5L/android-c
       }
       body{
         margin: 0px;
+        
       }
       div{
         text-align: center;
@@ -203,9 +202,15 @@ h5{
   <h2>Bollywood Movies</h2>
   <div class="Movie">
     <ul class="list">
-      <li class="mov"><a href="Adipurus.html">Adipurus 2023 Movie Download</a></li>
+      <li class="mov"><a href="KisiKaBhai.html">Kisi Ka Bhai Kisi Ka Jhaan 2023 Download</a></li>
+      <br>
+      <li class="mov"><a href="Adipurus.html">Adipurush 2023 Movie Download</a></li>
       <br>
       <li class="mov"><a href="ZaraHatke.html">Zara Hatke Zara Bachke 2023 Download</a></li>
+      <br>
+      <li class="mov"><a href="KeralaStory.html">Kerala Story 2023 Movie Download</a></li>
+      <br>
+      <li class="mov"><a href="chatrapati.html">Chatrapati 2023 Movie Download</a></li>
       <br>
       <li class="mov"><a href="Iloveyou.html">I Love You 2023 Movie Download</a></li>
       <br>
@@ -251,8 +256,9 @@ h5{
   <img class="founderimg" src="https://i.ibb.co/nDZZQ5x/kartikimage.jpg" height="200px" width="200px" >
   <h5>KARTIK SAHU</h5>
 </div>
-
-  <a href="https://wa.me/qr/6PENRIMWKALQN1 "><img src="https://i.ibb.co/hyX60k8/watsapp-png.png" alt="watsapp" height="110px" width="110px"></a><a href="https://instagram.com/kartiksahu896?igshid=MzNlNGNkZWQ4Mg=="><img src="https://i.ibb.co/qkNRgkP/insta.jpg" alt="insta"  height="60px" width="60px" ></a>   <a href="https://www.snapchat.com/add/kartik_sahu1842?share_id=jpgJrWScY10&locale=en-IN"><img src="https://i.ibb.co/nLSNtGw/snap.png" alt="snap" height="70px" width="70px" ></a>  
+<a href="https://wa.me/qr/6PENRIMWKALQN1 "><img src="https://i.ibb.co/TRr2jvV/whatsapp-png-14.png" alt="whatsapp-png-14" height="200ppi" width="300ppi"></a>
+<a href="https://instagram.com/kartiksahu896?igshid=MzNlNGNkZWQ4Mg=="><img src="https://i.ibb.co/wQvCcpR/insta-gram.png" alt="insta-gram" height="150ppi" width="300ppi"></a>
+<a href="https://www.snapchat.com/add/kartik_sahu1842?share_id=jpgJrWScY10&locale=en-IN"><img src="https://i.ibb.co/61qZhdV/snapchat1.png" alt="snapchat1" height="150ppi" width="200ppi"></a>
   <h4 class="sm:text-3xl text-2xl title-font font-medium text-gray-900 mt-4 mb-4">Feedback Form </h4>
 
 <div class="container">
