--- a/Adipurus.html
+++ b/Adipurus.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Filmy Fair</title>
-    <link 
-    rel="Shortcut Icon" type="image/png" img src="https://i.ibb.co/3c0Nt5L/android-chrome-512x512.png" >
+    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/3c0Nt5L/android-chrome-512x512.png">
+
 </head>
 <body>
     <style>
@@ -111,7 +111,7 @@ li a:hover {
                 ">Contact</a></li>
               <li style="float:right"><a class="active" href="Aboutus.html">About</a></li>
             </ul>
-            <a href="#"><img src="https://i.ibb.co/prGjqjB/Adipurus.jpg" alt="Adipurus" height="200px" width="394px"></a>
+            <a href="#"><img src="https://i.ibb.co/prGjqjB/Adipurus.jpg" alt="Adipurus" height="360ppi" width="360ppi"></a>
     <h3>Movie Information</h3>
     <ul class="information">
         <li> Movie Name :- Adipurus</li>
@@ -120,7 +120,7 @@ li a:hover {
         <li>Duration :- 2h 26min</li>
     </ul>
     <div class="dawnload">
-    <button class="btn"><a class="buttons" href="https://drive.google.com/uc?id=1DN1zOHUR-wH0g8AQHVav4TlPCH7bu3PS&amp;confirm=t&amp;uuid=ff8ffbc9-a088-4c0c-bde1-6e7ff38bd6f0&amp;at=AKKF8vwlOI3377DL-71KbI_7jCy9:1687358883568" dawnload> Download Movie</a> </button>
+      <a href="https://drive.google.com/file/d/1VOxx52efwb1HTxbDMoEGV4hKKcEJghFn/view?usp=drive_link"><img src="https://i.ibb.co/n0XdHwx/dawnload-image.webp" alt="dawnload-image" height="150ppi" width="150ppi"></a>
 </div>
   </body>
 </html>
