--- a/Iloveyou.html
+++ b/Iloveyou.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Filmy Fair</title>
-    <link 
-    rel="Shortcut Icon" type="image/png" img src="https://i.ibb.co/3c0Nt5L/android-chrome-512x512.png" >
+    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/3c0Nt5L/android-chrome-512x512.png">
+
 </head>
 <body>
     <style>
@@ -111,7 +111,7 @@ li a:hover {
                 ">Contact</a></li>
               <li style="float:right"><a class="active" href="Aboutus.html">About</a></li>
             </ul>
-            <a href="#"><img src="https://i.ibb.co/4FvjqQv/i-love-you-movie.jpg" alt="i-love-you-movie"  height="200px" width="394px"></a>
+            <a href="#"><img src="https://i.ibb.co/4FvjqQv/i-love-you-movie.jpg" alt="i-love-you-movie"  height="360ppi" width="360ppi></a>
             <h3>Movie Information</h3>
     <ul class="information">
         <li> Movie Name :- I Love You </li>
@@ -120,7 +120,7 @@ li a:hover {
         <li>Duration :- 1h 33min</li>
     </ul>
     <div class="dawnload">
-    <button class="btn"><a class="buttons" href="https://drive.google.com/uc?id=1WDBRZlQhrU7CFo8nwxQjgCIS8toTUBNK" dawnload> Download Movie</a> </button>
+      <a href="https://drive.google.com/file/d/1atvdFz00vxZ33uOROrdG8qA5TEDjMeH_/view?usp=drive_link"><img src="https://i.ibb.co/n0XdHwx/dawnload-image.webp" alt="dawnload-image" height="150ppi" width="150ppi"></a>
 </div>
   </body>
 </html>
