--- a/ZaraHatke.html
+++ b/ZaraHatke.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Filmy Fair</title>
-    <link 
-    rel="Shortcut Icon" type="image/png" img src="https://i.ibb.co/3c0Nt5L/android-chrome-512x512.png" >
+    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/3c0Nt5L/android-chrome-512x512.png">
+
 </head>
 <body>
     <style>
@@ -112,7 +112,7 @@ li a:hover {
                 ">Contact</a></li>
               <li style="float:right"><a class="active" href="Aboutus.html">About</a></li>
             </ul>
-            <a  class="img" href="#"><img src="https://i.ibb.co/nmwGbSJ/Zara-Hatke-Zara-Bachke.jpg" alt="Zara-Hatke-Zara-Bachke" height="200px" width="394px"></a>
+            <a  class="img" href="#"><img src="https://i.ibb.co/nmwGbSJ/Zara-Hatke-Zara-Bachke.jpg" alt="Zara-Hatke-Zara-Bachke" height="360ppi" width="360ppi"></a>
             <h3>Movie Information</h3>
     <ul class="information">
         <li> Movie Name :- Zara Hatke Zara Bachke </li>
@@ -121,7 +121,7 @@ li a:hover {
         <li>Duration :- 2h 20min</li>
     </ul>
     <div class="dawnload">
-    <button class="btn"><a class="buttons" href="https://drive.google.com/uc?id=19FST0G5rwTCrbHR9seGtfUsdIPhwAuSm" dawnload> Download Movie</a> </button>
+      <a href="https://drive.google.com/file/d/19mlYSjL9f4E8OxiAR5IphvZdVGio-G0F/view?usp=drivesdk"><img src="https://i.ibb.co/n0XdHwx/dawnload-image.webp" alt="dawnload-image" height="150ppi" width="150ppi"></a>
 </div>
   </body>
 </html>
