--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="Shortcut Icon" type="image.png" img src="https://i.ibb.co/3c0Nt5L/android-chrome-512x512.png" >
-</head>
+    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/3c0Nt5L/android-chrome-512x512.png">
+
+  </head>
 <body>
     <style>
         body{
@@ -99,7 +100,8 @@ h5{
    <img class="founderimg" src="https://i.ibb.co/nDZZQ5x/kartikimage.jpg" height="200px" width="200px" >
    <h5>KARTIK SAHU</h5>
 <!-- Add font awesome icons -->
-<a href="https://wa.me/qr/6PENRIMWKALQN1 "><img src="https://i.ibb.co/hyX60k8/watsapp-png.png" alt="watsapp" height="110px" width="110px"></a><a href="https://instagram.com/kartiksahu896?igshid=MzNlNGNkZWQ4Mg=="><img src="https://i.ibb.co/qkNRgkP/insta.jpg" alt="insta"  height="60px" width="60px" ></a>   <a href="https://www.snapchat.com/add/kartik_sahu1842?share_id=jpgJrWScY10&locale=en-IN"><img src="https://i.ibb.co/nLSNtGw/snap.png" alt="snap" height="70px" width="70px" ></a>  
-
+<a href="https://wa.me/qr/6PENRIMWKALQN1 "><img src="https://i.ibb.co/TRr2jvV/whatsapp-png-14.png" alt="whatsapp-png-14" height="200ppi" width="300ppi"></a>
+<a href="https://instagram.com/kartiksahu896?igshid=MzNlNGNkZWQ4Mg=="><img src="https://i.ibb.co/wQvCcpR/insta-gram.png" alt="insta-gram" height="150ppi" width="300ppi"></a>
+<a href="https://www.snapchat.com/add/kartik_sahu1842?share_id=jpgJrWScY10&locale=en-IN"><img src="https://i.ibb.co/61qZhdV/snapchat1.png" alt="snapchat1" height="150ppi" width="200ppi"></a>
 </body>
 </html>
