--- a/KeralaStory.html
+++ b/KeralaStory.html
@@ -119,7 +119,7 @@ li a:hover {
         <li>Duration :- 2h 36min</li>
     </ul>
     <div class="dawnload">
-        <a href="https://drive.google.com/file/d/1y9Nehm6JvM4z-71cYdyD5ecqCUjcmcyJ/view?usp=drive_link"><img src="https://i.ibb.co/n0XdHwx/dawnload-image.webp" alt="dawnload-image" height="150ppi" width="150ppi"></a>
+        <a href="https://uploadnow.io/f/m2wLhpp"><img src="https://i.ibb.co/n0XdHwx/dawnload-image.webp" alt="dawnload-image" height="150ppi" width="150ppi"></a>
 
     </div>
   </body>
