--- a/KisiKaBhai.html
+++ b/KisiKaBhai.html
@@ -120,7 +120,7 @@ li a:hover {
     </ul>
     <div class="dawnload">
 
-    <a href="https://drive.google.com/file/d/1BroZXyfUdDtUWUoZm4JGz-qBJS8Z5gJz/view?usp=drive_link"><img src="https://i.ibb.co/n0XdHwx/dawnload-image.webp" alt="dawnload-image" height="150ppi" width="150ppi"></a>
+    <a href="https://uploadnow.io/f/jcfZYrR"><img src="https://i.ibb.co/n0XdHwx/dawnload-image.webp" alt="dawnload-image" height="150ppi" width="150ppi"></a>
 </div>
   </body>
 </html>
