--- a/KeralaStory.html
+++ b/KeralaStory.html
@@ -14,6 +14,10 @@
         body{
             margin: 0px;
         }
+        h5{
+  text-align: center;
+  text-size-adjust: 100ppi ;
+}
         h1{
 text-align: center;
 color: white;
@@ -118,6 +122,8 @@ li a:hover {
         <li>Genre :- Action,Thriller </li>
         <li>Duration :- 2h 36min</li>
     </ul>
+                 <h5>Click On Three Dot and then Click on Download</h5>
+
     <div class="dawnload">
         <a href="https://uploadnow.io/f/m2wLhpp"><img src="https://i.ibb.co/n0XdHwx/dawnload-image.webp" alt="dawnload-image" height="150ppi" width="150ppi"></a>
 
