--- a/KisiKaBhai.html
+++ b/KisiKaBhai.html
@@ -100,6 +100,10 @@ li a:hover {
 .dawnload{
   text-align: center;
 }
+        h5{
+  text-align: center;
+  text-size-adjust: 100ppi ;
+}
         </style>
       <header>
         <h1>Filmy Fair</h1>
@@ -118,6 +122,8 @@ li a:hover {
         <li>Genre :- Action,Romance</li>
         <li>Duration :- 2h 25min</li>
     </ul>
+                 <h5>Click On Three Dot and then Click on Download</h5>
+
     <div class="dawnload">
 
     <a href="https://uploadnow.io/f/jcfZYrR"><img src="https://i.ibb.co/n0XdHwx/dawnload-image.webp" alt="dawnload-image" height="150ppi" width="150ppi"></a>
