--- a/Aboutus.html
+++ b/Aboutus.html
@@ -87,7 +87,7 @@ html {
 </style>
 <div class="about-section">
     <h1>About Us</h1>
-    <p>Hii I am FilmyFair allows you to watch and dawnload free movie.</p>
+    <p>Hii I am FilmyFair allows you to watch and download free movie.</p>
   </div>
   
   <h2 style="text-align:center">Our Team</h2>
@@ -98,7 +98,7 @@ html {
         <div class="container">
           <h2>Kartik Sahu</h2>
           <p class="title">Founder Of FilmyFair</p>
-          <p>Hii,I am kadrtik sahu student of computer application. My goal is to get good position in ISRO and DRDO and contribute to the nation. </p>
+          <p>Hii,I am kartik sahu student of computer application. My goal is to get good position in ISRO and DRDO and contribute to the nation. </p>
           <p>kartik1411sahu@gmail.com</p>
           <p><button class="button">Contact</button></p>
         </div>
