--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@ h5{
       <br>
       <li class="mov"><a href="Bedhiya.html">Bedhiya 2023 Movie Download</a></li>
       <br>
+      <li class="mov"><a href="Fanna.html">Fanna 2023 Movie Download</a></li>
+     <br>
       <li class="mov"><a href="TuJhotimfemakar.html">Tu Jhoti Mai Makar 2023 Movie Download</a></li>
       <br>
       <li class="mov"><a href="jogiresara.html">Jogire Sara Ra Ra 2023 Movie Download</a></li>
