--- a/index.html
+++ b/index.html
@@ -234,6 +234,8 @@ h5{
     <br>
     <li class="mov"><a href="Farzi.html">Farzi 2023 Movie Download</a></li>
     <br>
+    <li class="mov"><a href="Fanna.html">Fanna 2006 Movie Download</a></li>
+    <br>
     
 
     </ul>
