--- a/Fanna.html
+++ b/Fanna.html
@@ -120,7 +120,7 @@ li a:hover {
         <li>Duration :- 2h 56min</li>
     </ul>
     <div class="dawnload">
-      <a href="https://drive.google.com/file/d/1BmPafu-Az3Ww90IMfDgJPmKc_CSl76cx/view?usp=drive_link"><img src="https://i.ibb.co/n0XdHwx/dawnload-image.webp" alt="dawnload-image" height="150ppi" width="150ppi"></a>
+      <a href="https://uploadnow.io/f/cHjJhlb"><img src="https://i.ibb.co/n0XdHwx/dawnload-image.webp" alt="dawnload-image" height="150ppi" width="150ppi"></a>
 </div>
   </body>
 </html>
